--- a/src/main/webapp/WEB-INF/templates/front/outlines/header.html
+++ b/src/main/webapp/WEB-INF/templates/front/outlines/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
     xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-    <header th:fragment="common" class="header">
+    <header th:fragment="common" class="header no-print">
         <div class="headerWrap flex">
          	<!-- 메인 로고 부분-->
             <div class="logo">
