--- a/src/main/webapp/WEB-INF/templates/front/map/popup/cctv.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/cctv.html
@@ -3,12 +3,12 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{front/layouts/popup}">
 <main layout:fragment="content">
-    <section th:object="${requestObservation}">
+    <section th:object="${observatory}">
         <h2 class="text-center" th:text="*{obsnm}"></h2>
         <div class="h-line"></div>
         <div class="cctv">
             <video id="cctv" class="video-js" controls>
-                <source id="video-source" src="http://211.181.145.27:7080/gYPAHSHZtYB5SjPbX/a4Ai1vTA5Paf/aIL+SdZWMoGg=.m3u8" type="application/x-mpegURL">
+                <source id="video-source" th:src="*{cctvUrlL}" type="application/x-mpegURL">
             </video>
         </div>
     </section>
