feat : dashboard 저장버튼 pdf로 들어와서 수정

--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -30,7 +30,7 @@
             </div>
 
             <div>
-                <button type="button" onclick="print()"><i class="fa fa-download" aria-hidden="true"></i><th:block th:text="저장"></th:block></button>
+                <button><i class="fa fa-download" aria-hidden="true"></i><th:block th:text="저장"></th:block></button>
             </div>
         </div>
     </form>
