--- a/src/main/webapp/WEB-INF/templates/front/list/info.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/info.html
@@ -28,9 +28,9 @@
             </div>
         </div>
         <!-- 관측소 데이터 검색 -->
-        <div class="observationSearch mgn-bottom-10px">
-            <div class="flex alc searchTxt">
-                <i class="fa fa-search" aria-hidden="true"></i>
+        <div class="search mgn-bottom-10px">
+            <div class="flex align-center searchTxt">
+                <div class="searchIcon"><i class="fa fa-search" aria-hidden="true"></i></div>
                 <div>검색</div>
             </div>
             <form th:object="${observationSearch}" name="frmSearch" class="flex align-center obsForm">
