--- a/src/main/resources/static/front/css/dashboard/style.css
+++ b/src/main/resources/static/front/css/dashboard/style.css
@@ -5,6 +5,11 @@ main {
     width: 50vw;
     height: 50vh;
 }
+canvas {
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 10px;
+}
 
 .dashboardBtns{
     margin-left: 10px;
@@ -25,6 +30,9 @@ main {
     cursor: pointer;
 }
 
+.radio {
+    padding: 15px;
+}
 
 /* 테이블 스타일 */
 .minimalistBlack {
@@ -42,7 +50,7 @@ main {
 
 .dashList {
     border: 1px solid;
-    border-radius: 2%;
+    border-radius: 5px;
     padding: 10px;
 }
 
