--- a/src/main/resources/static/front/css/list/style.css
+++ b/src/main/resources/static/front/css/list/style.css
@@ -41,7 +41,7 @@
 
 .listbtn{
     float: right;
-    position: relative
+    position: relative;
     top: 50px
     width: 50px;
     height: 20px;
@@ -57,7 +57,7 @@
     background-color: var(--font-color);
 }
 
-.flex{
+.box{
     padding: 10px 20px;
 }
 
