--- a/src/main/webapp/WEB-INF/templates/front/list/update.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/update.html
@@ -10,7 +10,7 @@
         </div>
         <br>
         <hr>
-        <div class="flex align-center">
+        <div class="box">
             <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off" th:object="${requestObservatory}">
                 <input type="hidden" name="mode" value="update">
                 <input type="hidden" name="obscd" th:field="*{obscd}">
