--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -83,10 +83,10 @@
 		</section>
 	</div>
 
-	<script>
-		const { popup } = commonLib;
-        const infoBtn = document.getElementById("popup");
-        <!--infoBtn.onclick = () => popup.open('/map/info', 450, 450);-->
-	</script>
+<!--	<script>-->
+<!--		const { popup } = commonLib;-->
+<!--        const infoBtn = document.getElementById("popup");-->
+<!--        &lt;!&ndash;infoBtn.onclick = () => popup.open('/map/info', 450, 450);&ndash;&gt;-->
+<!--	</script>-->
 </main>
 </html>
