--- a/src/main/resources/static/front/css/list/style.css
+++ b/src/main/resources/static/front/css/list/style.css
@@ -41,8 +41,8 @@
 
 .listbtn{
     float: right;
-    position: relative
-    top: 50px
+    position: relative;
+    top: 50px;
     width: 50px;
     height: 20px;
     border: 2px solid;
