--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -262,3 +262,70 @@ h2{
 
     @page { margin: 0; }
 }
+
+/* 검색 아이콘*/
+
+.searchIcon {
+    background-color: #000;
+    width: 27px;
+    height: 27px;
+    border-radius: 50%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin: 0 20px;
+}
+
+.searchIcon i {
+    color: #fff;
+}
+
+/* 검색 창 */
+.search{
+    clear: both;
+    border: 1px solid #222;
+    border-radius: 5px;
+    padding: 15px;
+}
+.searchTxt{
+    border-bottom: 1px solid #222;
+    padding-bottom: 10px;
+}
+.obsForm{
+    padding-top: 10px;
+}
+.obsForm span{
+    padding: 0 10px;
+}
+.obsForm input{
+    padding: 0 5px;
+}
+.searchBtn{
+    background: var(--main-color);
+    color: #fff;
+    padding: 5px 10px;
+    border: 1px solid var(--main-color);
+    border-radius: 3px;
+}
+
+/* 목록 버튼 */
+
+.title button{
+    cursor: pointer;
+    height: 30px;
+    background: #fff;
+    border: 1px solid var(--main-color);
+    color: var(--main-color);
+    border-radius: 3px;
+    padding: 0 10px;
+}
+.title button:hover{
+    background: var(--main-color);
+    color: #fff;
+}
+
+.searchClose {
+    border: 1px solid;
+    padding: 5px;
+    border-radius: 5px;
+}
