--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -3,15 +3,21 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{front/layouts/main}">
 <main layout:fragment="content" >
-    <h1>관측소 정보</h1>
+    <h2>관측소 정보</h2>
     <div class="search">
         <div class="flex align-center">
-            <div class="searchIcon"><div><i class="fa fa-search" aria-hidden="true"></i></div></div>
-            <div>검색</div>
+            <div class="flex align-center">
+                <div class="searchIcon"><div><i class="fa fa-search" aria-hidden="true"></i></div></div>
+                <div th:text="검색"></div>
+            </div>
+            <div class="flex align-center searchClose">
+                <i class="fa fa-th-large" aria-hidden="true"></i>
+                <div th:text="닫기"></div>
+            </div>
         </div>
         <form id="searchFrm" th:action="@{/list}" method="get" th:object="${observatorySearch}">
             <hr>
-            <div class="flex align-center">
+            <div class="align-center">
                 <label for="obscd">관측소 코드 </label>
                 <input type="text" id="obscd" class="onlyNum" name="obscd" th:field="*{obscd}" placeholder="xxxxxxx" data-form="searchFrm">
                 <label for="obsnm">관측소명</label>
@@ -23,13 +29,13 @@
                     <option value="wl">수위</option>
                     <option value="flw">유량</option>
                 </select>
-                <button type="submit" class="searchBtn">검색</button>
+            <button type="submit" class="searchBtn">검색</button>
             </div>
         </form>
     </div>
 
     <div class="submitBtn">
-        <a th:href="@{/list/add}" class="btn" >등록</a>
+        <a th:href="@{/list/add}" class="btn" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i>등록</a>
     </div>
     <div class="divTable minimalistBlack">
         <div class="divTableHeading">
