--- a/src/main/resources/static/front/css/list/style.css
+++ b/src/main/resources/static/front/css/list/style.css
@@ -41,20 +41,25 @@
 
 .listbtn{
     float: right;
-    position: relative;
-    top: 50px
-    width: 50px;
-    height: 20px;
-    border: 2px solid;
-    background-color: var(--font-color);
-    text-align: center;
+    border-radius: 3px;
+    padding: 0 15px;
+    height: 30px;
+    background: var(--main-color);
+    border: 1px solid var(--main-color);
 }
+
+.listbtn a {
+    color: #fff;
+}
+
 .submitBtn a{
     float: right;
-    width: 40px;
-    height: 20px;
-    border: 2px solid;
-    background-color: var(--font-color);
+    color: #fff;
+    border-radius: 3px;
+    padding: 0 15px;
+    height: 30px;
+    border: 1px solid var(--main-color);
+    background: var(--main-color);
 }
 
 .box{
@@ -65,11 +70,12 @@
     text-align: center;
 }
 .submitBtn button{
-
-    width: 40px;
-    height: 20px;
-    border: 2px solid;
-    background-color: var(--font-color);
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 3px;
+    height: 30px;
+    background: var(--main-color);
+    border: 1px solid var(--main-color);
 }
 
 .form_box dl {
