design: 관측소 이상치 수정 css 설정

--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -15,7 +15,7 @@
                     <div th:text="닫기"></div>
                 </div>
             </div>
-            <div>
+            <div class="bdr-top searchEl">
                 <label for="obscd">관측소 코드 </label>
                 <input type="hidden" name="type" id="type" th:field="*{type}">
                 <input type="text" class="onlyNum" id="obscd" name="obscd" th:field="*{obscd}" placeholder="xxxxxxx" data-form="searchFrm">
