--- a/src/main/webapp/WEB-INF/templates/front/map/aside.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/aside.html
@@ -6,7 +6,7 @@
     <form class="searchFrm mgn-bottom-10px" th:object="${observatorySearch}">
         <div class="flex align-center mgn-bottom-10px">
             <input type="text" class="searchInp" th:placeholder="#{관측소명_입력}" name="obsnm">
-            <button type="submit" class="searchBtn">
+            <button type="submit" class="obsSearch">
                 <i class="xi-search"></i>
             </button>
         </div>
