--- a/src/main/webapp/WEB-INF/templates/front/list/setting.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/setting.html
@@ -49,11 +49,19 @@
         </div>
         <!-- 관측소 데이터 검색 -->
         <div class="search mgn-bottom-10px">
-            <div class="flex align-center searchTxt">
-                <div class="searchIcon"><i class="fa fa-search" aria-hidden="true"></i></div>
-                <div>검색</div>
+            <div class="flex align-center just-btw searchTxt">
+                <div class="flex">
+                    <div class="searchIcon">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </div>
+                    <div>검색</div>
+                </div>
+                <div class="flex align-center searchClose">
+                    <i class="fa fa-th-large" aria-hidden="true"></i>
+                    <div th:text="닫기"></div>
+                </div>
             </div>
-            <form th:object="${observationSearch}" class="flex align-center obsForm">
+            <form th:object="${observationSearch}" class="searchEl bdr-top flex align-center obsForm">
                 <input type="hidden" name="type" th:value="${requestObservatory.type}">
                 <input type="hidden" name="obscd" th:value="${requestObservatory.obscd}">
                 <input type="hidden" name="outlier" th:value="${requestObservatory.outlier}">
