design: 대시보드 차트, 표 위치 조정

--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -37,7 +37,7 @@
 
 
 
-    <div class=" flex">
+    <div class="flex just-btw">
         <div class="chart"></div>
 
         <div class="dashList">
