--- a/src/main/resources/static/front/css/dashboard/style.css
+++ b/src/main/resources/static/front/css/dashboard/style.css
@@ -2,14 +2,12 @@ main {
     padding: 20px 20px 0;
 }
 .chart {
-    width: 50vw;
-    height: 50vh;
-    margin-right: 50px;
-}
-canvas {
-    border: 1px solid;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 70%;
+    min-height: 550px;
+    border: 1px solid #222;
     border-radius: 5px;
-    padding: 10px;
 }
 
 .dashboardBtns{
@@ -40,7 +38,8 @@ canvas {
     border: none;
     border-top: 1px solid;
     text-align: center;
-    width: 300px;
+    width: 100%;
+    min-height: 500px;
 }
 .divTable.minimalistBlack .divTableHeading, .divTable.minimalistBlack .divTableHead, .divTable.minimalistBlack .divTableCell {
     border: none;
@@ -48,12 +47,15 @@ canvas {
 .divTable.minimalistBlack .divTableHeading div.divTableHead {
     text-align: center;
 }
-
 .dashList {
     border: 1px solid;
     border-radius: 5px;
     padding: 10px;
+    width: 30%;
+    min-height: 550px;
+    margin-right: 10px;
 }
+
 
 .divTableCell {
     border-bottom: 1px solid;
