design: info페이지 스크롤 추가

--- a/src/main/resources/static/front/css/list/info.css
+++ b/src/main/resources/static/front/css/list/info.css
@@ -28,3 +28,12 @@
 .btns{
    flex-direction: row-reverse;
 }
+
+.info-list-wrap {
+    height: 400px;
+    overflow-y: auto;
+    position: relative;
+    padding-right: 20px;
+    box-sizing: border-box;
+}
+.info-list-wrap * { box-sizing: border-box; }
