--- a/src/main/webapp/WEB-INF/templates/front/list/info.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/info.html
@@ -70,10 +70,13 @@
                     <i class="fa fa-download"></i><span th:text="저장"></span>
                 </button>
             </div>
+            <div class="info-list-wrap">
                 <div class="divTable minimalistBlack" id="data">
-                <div class="divTableHeading">
-                </div>
-                <div class="divTableBody">
+                    <div class="divTableHeading">
+                    </div>
+
+                    <div class="divTableBody">
+                    </div>
                 </div>
             </div>
             <ul class="pagination" id="pagination"></ul>
