--- a/src/main/webapp/WEB-INF/templates/front/map/popup/cctv.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/cctv.html
@@ -7,7 +7,7 @@
         <h2 class="text-center" th:text="*{obsnm}"></h2>
         <div class="h-line"></div>
         <div class="cctv">
-            <video id="cctv" class="video-js" controls>
+            <video id="cctv" class="video-js" controls width="320" height="240">
                 <source id="video-source" th:src="*{cctvUrlL}" type="application/x-mpegURL">
             </video>
         </div>
