--- a/src/main/webapp/WEB-INF/templates/front/map/popup/flw.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/flw.html
@@ -13,7 +13,7 @@
             </div>
             <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{유량값}"></div>
-                <div class="divTableCellPopup" th:text="*{fw}"></div>
+                <div class="divTableCellPopup" th:text="*{fw + ' m3/sec'}"></div>
             </div>
             <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{위치}"></div>
