--- a/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
@@ -13,11 +13,11 @@
             </div>
             <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{현재강수량}"></div>
-                <div class="divTableCellPopup" th:text="*{rf}"></div>
+                <div class="divTableCellPopup" th:text="*{rf + ' mm'}"></div>
             </div>
             <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{누적강수량}"></div>
-                <div class="divTableCellPopup" th:text="*{rf}"></div>
+                <div class="divTableCellPopup" th:text="*{rf + ' mm'}"></div>
             </div>
             <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{위치}"></div>
