perform : 팝업 단위추가

--- a/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
@@ -14,11 +14,11 @@
             </div>
             <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{현재수위}"></div>
-                <div class="divTableCellPopup" th:text="*{wl}"></div>
+                <div class="divTableCellPopup" th:text="*{wl + ' m'}"></div>
             </div>
             <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{수위변화}"></div>
-                <div class="divTableCellPopup" th:text="*{wl}"></div>
+                <div class="divTableCellPopup" th:text="*{wl + ' m'}"></div>
             </div>
             <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{위치}"></div>
