--- a/src/main/resources/static/front/css/map/map.css
+++ b/src/main/resources/static/front/css/map/map.css
@@ -1,3 +1,11 @@
+body {
+	width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 .align-right{
     margin-left: auto;
 }
@@ -93,5 +101,6 @@
     background: #5462A6;
     color: #fff;
 }
+
 
 /* 마커 팝업 */
