--- a/src/main/webapp/WEB-INF/templates/front/map/aside.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/aside.html
@@ -38,7 +38,12 @@
                 <div class="divTableHead" th:if="${observatorySearch.type == 'cctv'}" th:text="#{지점명}"></div>
                 <div class="divTableHead" th:unless="${observatorySearch.type == 'cctv'}" th:text="#{관측소명}"></div>
                 <div class="divTableHead" th:if="${observatorySearch.type == 'cctv'}" th:text="#{상태}"></div>
-                <div class="divTableHead" th:unless="${observatorySearch.type == 'cctv'}" th:text="#{실시간_관측값}"></div>
+                <div class="divTableHead" th:unless="${observatorySearch.type == 'cctv'}">
+                    <span th:text="#{실시간_관측값}"></span>
+                    <span class="unit" th:classappend="${observatorySearch.type == 'rf'? 'rf' : ''}
+                          +${observatorySearch.type == 'wl'? 'wl': ''}
+                          +${observatorySearch.type == 'flw'? 'fw': ''}"></span>
+                </div>
             </div>
         </div>
         <div class="divTableBody">
@@ -49,9 +54,7 @@
                     <span th:if="${observatorySearch.type == 'wl'}" th:text="*{wl}"></span>
                     <span th:if="${observatorySearch.type == 'flw'}" th:text="*{fw}"></span>
                     <span th:if="${observatorySearch.type == 'cctv'}" th:text="#{정상}"></span>
-                    <span class="unit" th:classappend="${observatorySearch.type == 'rf'? 'rf' : ''}
-                          +${observatorySearch.type == 'wl'? 'wl': ''}
-                          +${observatorySearch.type == 'flw'? 'fw': ''}"></span>
+
                 </div>
             </div>
             <div class="divTableRow" th:unless="${items != null && !items.isEmpty()}">
