--- a/src/main/webapp/WEB-INF/templates/front/list/info.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/info.html
@@ -76,6 +76,8 @@
                     <i class="fa fa-download"></i><span th:text="저장"></span>
                 </button>
             </div>
+            <!-- 10분일 때 타입, 단위 표시 -->
+            <span class="typeUnit"></span>
             <div class="info-list-wrap">
                 <div class="divTable minimalistBlack" id="data">
                     <div class="divTableHeading">
