design: info 1시간일 때 타입 단위 표시

--- a/src/main/resources/static/front/css/list/info.css
+++ b/src/main/resources/static/front/css/list/info.css
@@ -37,3 +37,9 @@
     box-sizing: border-box;
 }
 .info-list-wrap * { box-sizing: border-box; }
+
+.typeUnit{
+    float: right;
+    margin-bottom: 5px;
+    font-size: 13px;
+}
