feat: 레이어범례 design: aside 아이콘 추가

--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -102,6 +102,11 @@ h2{
     font-size: 15px;
     font-weight: 500;
 }
+
+.font-13px{
+    font-size: 13px;
+    font-weight: 500;
+}
 .cursor {
     cursor: pointer;
 }
